[package]
name = "korg-the-bot"
version = "0.1.0"
authors = ["Sir Matrix <killer20816@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"]
version = "0.9.0-rc.1"
